--- a/index.html
+++ b/index.html
@@ -3345,8 +3345,21 @@
       return m ? Number(m[1]) : null;
     }
 
+    function parseIsoLocalDate(dateLike) {
+      const s = String(dateLike || '').trim();
+      const m = s.match(/^(\d{4})-(\d{2})-(\d{2})$/);
+      if (!m) return null;
+      const y = Number(m[1]);
+      const mo = Number(m[2]) - 1;
+      const d = Number(m[3]);
+      const dt = new Date(y, mo, d, 12, 0, 0, 0);
+      return Number.isNaN(dt.getTime()) ? null : dt;
+    }
+
     function parseDateOrNow(dateLike) {
       if (dateLike) {
+        const localIso = parseIsoLocalDate(dateLike);
+        if (localIso) return localIso;
         const d = new Date(dateLike);
         if (!Number.isNaN(d.getTime())) return d;
       }
@@ -3381,13 +3394,17 @@
       };
     }
 
-    function forecastQuarterFromStartDate(startDateIso) {
-      if (!startDateIso) return null;
-      const d = new Date(startDateIso);
-      if (Number.isNaN(d.getTime())) return null;
+    function forecastQuarterFromDate(dateLike) {
+      if (!dateLike) return null;
+      const d = parseDateOrNow(dateLike);
+      if (!d || Number.isNaN(d.getTime())) return null;
       const info = fiscalQuarterLabel(d);
       const yy = String(info.fiscalYear).slice(-2);
       return `Q${info.quarter} FY${yy}`;
+    }
+
+    function forecastQuarterFromStartDate(startDateIso) {
+      return forecastQuarterFromDate(startDateIso);
     }
 
     function addMonthsSafe(dateObj, monthsToAdd) {
@@ -5605,7 +5622,7 @@
       wonRows.forEach((r) => {
         const amount = Math.max(0, Number(r.deal_size || 0));
         if (!amount) return;
-        const start = r.start_date ? new Date(r.start_date) : null;
+        const start = r.start_date ? parseDateOrNow(r.start_date) : null;
         if (!start || Number.isNaN(start.getTime())) {
           wonUnphased += amount;
           return;
@@ -5616,7 +5633,7 @@
         let phasedAny = false;
         for (let i = 0; i < durationMonths; i += 1) {
           const monthDate = addMonthsSafe(start, i);
-          const fq = forecastQuarterFromStartDate(monthDate.toISOString().slice(0, 10));
+          const fq = forecastQuarterFromDate(monthDate);
           if (fq && Object.prototype.hasOwnProperty.call(wonQuarterTotals, fq)) {
             wonQuarterTotals[fq] += monthlyAmount;
             const key = `Won (Start Date)||${fq}`;
